--- a/POMDP.ipynb
+++ b/POMDP.ipynb
@@ -461,27 +461,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0-element Array{Any,1}"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "uav_poses = [] # Vector of sequential uav poses\n",
-    "target_poses = []"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -611,10 +590,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "uav_poses = [] # Vector of sequential uav poses\n",
+    "target_poses = []\n",
     "for (s, b, a, r, sp, o) in hist\n",
     "    # @show s, a, r, sp, o\n",
-    "    \n",
     "    push!(uav_poses, s.uavPose)\n",
     "    push!(target_poses, s.targetPose)\n",
     "end"
